--- a/README
+++ b/README
@@ -1,3 +1,4 @@
 通过一系列的场景来介绍Scala的各种特性。
 
-在珠三角技术沙龙2011年1月广州小沙龙上面的讲稿：http://www.slideshare.net/jeffkit/scala-jeff
+在珠三角技术沙龙2011年1月广州小沙龙上面的讲稿：
+http://www.slideshare.net/jeffkit/scala-jeff
